added violet diamond block to the game

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.tutorialmod.violet_diamond": "Violet Diamond",
-  "item.tutorialmod.raw_violet_diamond": "Raw Violet Diamond"
+  "item.tutorialmod.raw_violet_diamond": "Raw Violet Diamond",
+
+  "block.tutorialmod.violet_diamond_block": "Block of Violet Diamond"
 }
