added regular (stone) violet diamond ore to the game

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,4 +3,5 @@
   "item.tutorialmod.raw_violet_diamond": "Raw Violet Diamond",
 
   "block.tutorialmod.violet_diamond_block": "Block of Violet Diamond"
+  "block.tutorialmod.violet_diamond_block": "Ore of Violet Diamond"
 }
